// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractResult() extracts benchmark output from benchmarkdotnet - benchmarkdotnet.json 1`] = `
{
  "benches": [
    {
      "name": "Sample.Benchmarks.Fib10",
      "range": "± 0.1981212530783709",
      "unit": "ns",
      "value": 24.4202085009643,
    },
    {
      "name": "Sample.Benchmarks.Fib20",
      "range": "± 0.7903737021529575",
      "unit": "ns",
      "value": 51.52008151549559,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "benchmarkdotnet",
}
`;

exports[`extractResult() extracts benchmark output from benchmarkjs - benchmarkjs_output.txt 1`] = `
{
  "benches": [
    {
      "extra": "93 samples",
      "name": "fib(10)",
      "range": "±0.74%",
      "unit": "ops/sec",
      "value": 1431759,
    },
    {
      "extra": "96 samples",
      "name": "fib(20)",
      "range": "±0.32%",
      "unit": "ops/sec",
      "value": 12146,
    },
    {
      "extra": "69 samples",
      "name": "createObjectBuffer with 200 comments",
      "range": "±1.70%",
      "unit": "ops/sec",
      "value": 81.61,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "benchmarkjs",
}
`;

exports[`extractResult() extracts benchmark output from benchmarkluau - benchmarkluau_output.txt 1`] = `
{
  "benches": [
    {
      "extra": "luau",
      "name": "base64",
      "range": "±0.636%",
      "unit": "ms",
      "value": 15.041,
    },
    {
      "extra": "luau",
      "name": "chess",
      "range": "±0.212%",
      "unit": "ms",
      "value": 69.56,
    },
    {
      "extra": "luau",
      "name": "life",
      "range": "±0.187%",
      "unit": "ms",
      "value": 85.089,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "benchmarkluau",
}
`;

exports[`extractResult() extracts benchmark output from cargo - cargo_output.txt 1`] = `
{
  "benches": [
    {
      "name": "bench_fib_10",
      "range": "± 24",
      "unit": "ns/iter",
      "value": 135,
    },
    {
      "name": "bench_fib_20",
      "range": "± 755",
      "unit": "ns/iter",
      "value": 18149,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "cargo",
}
`;

exports[`extractResult() extracts benchmark output from cargo - cargo_output_units.txt 1`] = `
{
  "benches": [
    {
      "name": "cmov",
      "range": "± 14",
      "unit": "cycles/iter",
      "value": 2835,
    },
    {
      "name": "cmov2",
      "range": "± 19",
      "unit": "cycles/iter",
      "value": 2845,
    },
    {
      "name": "mov",
      "range": "± 17",
      "unit": "cycles/iter",
      "value": 1508,
    },
    {
      "name": "upload",
      "range": "± 420",
      "unit": "MS/s",
      "value": 1911,
    },
    {
      "name": "download",
      "range": "± 69",
      "unit": "MS/s",
      "value": 9001,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "cargo",
}
`;

exports[`extractResult() extracts benchmark output from cargo - cargo_output2.txt 1`] = `
{
  "benches": [
    {
      "name": "bench_engine_new",
      "range": "± 70126",
      "unit": "ns/iter",
      "value": 211834,
    },
    {
      "name": "bench_engine_new_raw",
      "range": "± 18",
      "unit": "ns/iter",
      "value": 197,
    },
    {
      "name": "bench_engine_new_raw_core",
      "range": "± 31",
      "unit": "ns/iter",
      "value": 196,
    },
    {
      "name": "bench_engine_register_fn",
      "range": "± 82",
      "unit": "ns/iter",
      "value": 493,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "cargo",
}
`;

exports[`extractResult() extracts benchmark output from cargo - cargo_output3.txt 1`] = `
{
  "benches": [
    {
      "name": "bench_fib_10",
      "range": "± 2.21",
      "unit": "ns/iter",
      "value": 148.7,
    },
    {
      "name": "bench_fib_20",
      "range": "± 440.25",
      "unit": "ns/iter",
      "value": 18794.12,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "cargo",
}
`;

exports[`extractResult() extracts benchmark output from cargo - criterion_output.txt 1`] = `
{
  "benches": [
    {
      "name": "Create Realm",
      "range": "± 4",
      "unit": "ns/iter",
      "value": 329,
    },
    {
      "name": "Symbols (Execution)",
      "range": "± 47",
      "unit": "ns/iter",
      "value": 3268,
    },
    {
      "name": "For loop (Execution)",
      "range": "± 123",
      "unit": "ns/iter",
      "value": 12314,
    },
    {
      "name": "Fibonacci (Execution)",
      "range": "± 10166",
      "unit": "ns/iter",
      "value": 1672496,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "cargo",
}
`;

exports[`extractResult() extracts benchmark output from catch2 - benchmark_results.xml 1`] = `
{
  "benches": [
    {
      "extra": "100 samples
17 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: Scalar addition",
      "range": "± 49.2626",
      "unit": "ns",
      "value": 796.98,
    },
    {
      "extra": "100 samples
38 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD addition",
      "range": "± 12.8385",
      "unit": "ns",
      "value": 347.903,
    },
    {
      "extra": "100 samples
17 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: Scalar De-interleave",
      "range": "± 139.609",
      "unit": "ns",
      "value": 885.215,
    },
    {
      "extra": "100 samples
32 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: Scalar Interleave",
      "range": "± 16.0851",
      "unit": "ns",
      "value": 413.068,
    },
    {
      "extra": "100 samples
22 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: Scalar De-interleave Accumulate",
      "range": "± 50.5342",
      "unit": "ns",
      "value": 581.757,
    },
    {
      "extra": "100 samples
24 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: Scalar Interleave Accumulate",
      "range": "± 11.2403",
      "unit": "ns",
      "value": 583.901,
    },
    {
      "extra": "100 samples
64 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD De-interleave",
      "range": "± 21.7946",
      "unit": "ns",
      "value": 214.25,
    },
    {
      "extra": "100 samples
58 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD Interleave",
      "range": "± 35.1114",
      "unit": "ns",
      "value": 385.501,
    },
    {
      "extra": "100 samples
56 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD De-interleave Accumulate",
      "range": "± 11.6337",
      "unit": "ns",
      "value": 234.672,
    },
    {
      "extra": "100 samples
50 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD Interleave Accumulate",
      "range": "± 11.6039",
      "unit": "ns",
      "value": 267.823,
    },
    {
      "extra": "100 samples
47 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: Scalar LR>SM (swapped MS)",
      "range": "± 10.6175",
      "unit": "ns",
      "value": 281.832,
    },
    {
      "extra": "100 samples
31 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD LR>SM (swapped MS)",
      "range": "± 18.9874",
      "unit": "ns",
      "value": 437.107,
    },
    {
      "extra": "100 samples
19 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: SIMD LR>SM (swapped MS) swap all first",
      "range": "± 89.5018",
      "unit": "ns",
      "value": 1179.8,
    },
    {
      "extra": "100 samples
9 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: std::exp<double>(x)",
      "range": "± 48.0865",
      "unit": "ns",
      "value": 1520.41,
    },
    {
      "extra": "100 samples
20 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: exp<double,6>(x)",
      "range": "± 49.2443",
      "unit": "ns",
      "value": 668.041,
    },
    {
      "extra": "100 samples
20 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: exp<double,7>(x)",
      "range": "± 57.0058",
      "unit": "ns",
      "value": 687.305,
    },
    {
      "extra": "100 samples
19 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: exp<double,8>(x)",
      "range": "± 47.0196",
      "unit": "ns",
      "value": 726.309,
    },
    {
      "extra": "100 samples
18 iterations",
      "name": "Test Case: Arithmetic Performance — Benchmark: exp<double,9>(x)",
      "range": "± 31.2252",
      "unit": "ns",
      "value": 760.041,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: FastDirectoryIterator - performance — Benchmark: JUCE",
      "range": "± 1.57601e+06",
      "unit": "ns",
      "value": 38884700,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: FastDirectoryIterator - performance — Benchmark: Merlin",
      "range": "± 56716.5",
      "unit": "ns",
      "value": 4548510,
    },
    {
      "extra": "100 samples
9 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Compile medium complexity arithmetic and optimise (MES)",
      "range": "± 386.984",
      "unit": "ns",
      "value": 1538.97,
    },
    {
      "extra": "100 samples
16 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Compile medium complexity arithmetic no optimisation (MES)",
      "range": "± 87.0848",
      "unit": "ns",
      "value": 862.028,
    },
    {
      "extra": "100 samples
919 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Execute medium complexity arithmetic with optimisation (MES)",
      "range": "± 0.442008",
      "unit": "ns",
      "value": 14.4931,
    },
    {
      "extra": "100 samples
268 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Execute medium complexity arithmetic without optimisation (MES)",
      "range": "± 2.24854",
      "unit": "ns",
      "value": 48.7199,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Compile medium complexity arithmetic function (JUCE js) new JS engine each iter",
      "range": "± 16295.5",
      "unit": "ns",
      "value": 121675,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Compile and execute medium complexity arithmetic function (JUCE js) new JS engine each iter",
      "range": "± 4180.05",
      "unit": "ns",
      "value": 125162,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Evaluate medium complexity arithmetic expression (JUCE js) new JS engine each iter",
      "range": "± 11156.5",
      "unit": "ns",
      "value": 123782,
    },
    {
      "extra": "100 samples
5 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Compile medium complexity arithmetic function (JUCE js) reuse JS engine each iter",
      "range": "± 499.017",
      "unit": "ns",
      "value": 3369.48,
    },
    {
      "extra": "100 samples
37 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Call medium complexity arithmetic function (JUCE js) reuse JS engine each iter",
      "range": "± 24.2807",
      "unit": "ns",
      "value": 363.611,
    },
    {
      "extra": "100 samples
7 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: Evaluate medium complexity arithmetic expression (JUCE js) reuse JS engine each iter",
      "range": "± 505.519",
      "unit": "ns",
      "value": 1913.49,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: JS Parsing",
      "range": "± 11145.8",
      "unit": "ns",
      "value": 39409.5,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: Modulation Performance — Benchmark: JSON Parsing",
      "range": "± 3480.58",
      "unit": "ns",
      "value": 26182.5,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "catch2",
}
`;

exports[`extractResult() extracts benchmark output from catch2 - catch2_output.xml 1`] = `
{
  "benches": [
    {
      "extra": "100 samples
128 iterations",
      "name": "Test Case: Fibonacci — Benchmark: Fibonacci 10",
      "range": "± 10.294",
      "unit": "ns",
      "value": 154.037,
    },
    {
      "extra": "100 samples
1 iterations",
      "name": "Test Case: Fibonacci — Benchmark: Fibonacci 20",
      "range": "± 2476.21",
      "unit": "ns",
      "value": 20100.5,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "catch2",
}
`;

exports[`extractResult() extracts benchmark output from catch2 - catch2_output_v2.txt 1`] = `
{
  "benches": [
    {
      "extra": "100 samples
208 iterations",
      "name": "Fibonacci 10",
      "range": "± 19",
      "unit": "ns",
      "value": 344,
    },
    {
      "extra": "100 samples
2 iterations",
      "name": "Fibonacci 20",
      "range": "± 3.256",
      "unit": "us",
      "value": 41.731,
    },
    {
      "extra": "100 samples
1961 iterations",
      "name": "Fibonacci~ 5!",
      "range": "± 4",
      "unit": "ns",
      "value": 36,
    },
    {
      "extra": "100 samples
20 iterations",
      "name": "Fibonacci-15_bench",
      "range": "± 362",
      "unit": "us",
      "value": 3.789,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "catch2",
}
`;

exports[`extractResult() extracts benchmark output from catch2 - catch2_output_v3.txt 1`] = `
{
  "benches": [
    {
      "extra": "100 samples
208 iterations",
      "name": "Fibonacci 10",
      "range": "± 19",
      "unit": "ns",
      "value": 344,
    },
    {
      "extra": "100 samples
2 iterations",
      "name": "Fibonacci 20",
      "range": "± 3.256",
      "unit": "us",
      "value": 41.731,
    },
    {
      "extra": "100 samples
1961 iterations",
      "name": "Fibonacci~ 5!",
      "range": "± 4",
      "unit": "ns",
      "value": 36,
    },
    {
      "extra": "100 samples
20 iterations",
      "name": "Fibonacci-15_bench",
      "range": "± 362",
      "unit": "us",
      "value": 3.789,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "catch2",
}
`;

exports[`extractResult() extracts benchmark output from catch2 - issue16_output.txt 1`] = `
{
  "benches": [
    {
      "extra": "100 samples
76353 iterations",
      "name": "Fibonacci 10",
      "range": "± 0",
      "unit": "ns",
      "value": 0,
    },
    {
      "extra": "100 samples
75814 iterations",
      "name": "Fibonacci 20",
      "range": "± 0",
      "unit": "ns",
      "value": 1,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "catch2",
}
`;

exports[`extractResult() extracts benchmark output from customBiggerIsBetter - customBiggerIsBetter_output.json 1`] = `
{
  "benches": [
    {
      "name": "My Custom Bigger Is Better Benchmark - Throughput",
      "unit": "req/s",
      "value": 70,
    },
    {
      "extra": "Optional Value #1: 25
Helpful Num #2: 100
Anything Else!",
      "name": "My Custom Bigger Is Better Benchmark - Free Memory",
      "range": "3",
      "unit": "Megabytes",
      "value": 150,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "customBiggerIsBetter",
}
`;

exports[`extractResult() extracts benchmark output from customSmallerIsBetter - customSmallerIsBetter_output.json 1`] = `
{
  "benches": [
    {
      "extra": "My Optional Information for the tooltip",
      "name": "My Custom Smaller Is Better Benchmark - CPU Load",
      "range": "5%",
      "unit": "Percent",
      "value": 50,
    },
    {
      "name": "My Custom Smaller Is Better Benchmark - Memory Used",
      "unit": "Megabytes",
      "value": 100,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "customSmallerIsBetter",
}
`;

exports[`extractResult() extracts benchmark output from customSmallerIsBetter - customSmallerIsBetter_output2.json 1`] = `
{
  "benches": [
    {
      "name": "No instrumentation",
      "range": "0.519165",
      "unit": "ns",
      "value": 90.9439,
    },
    {
      "name": "Deactivated probe",
      "range": "8.21371",
      "unit": "ns",
      "value": 445.661,
    },
    {
      "name": "No logging",
      "range": "10.2008",
      "unit": "ns",
      "value": 1847.38,
    },
    {
      "name": "Binary file",
      "range": "87.1657",
      "unit": "ns",
      "value": 3886.75,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "customSmallerIsBetter",
}
`;

exports[`extractResult() extracts benchmark output from go - go_fiber_output.txt 1`] = `
{
  "benches": [
    {
      "extra": "4846809 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{".xml"}",
      "unit": "ns/op	       0 B/op	       0 allocs/op",
      "value": 247.6,
    },
    {
      "extra": "4846809 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{".xml"} - ns/op",
      "unit": "ns/op",
      "value": 247.6,
    },
    {
      "extra": "4846809 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{".xml"} - B/op",
      "unit": "B/op",
      "value": 0,
    },
    {
      "extra": "4846809 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{".xml"} - allocs/op",
      "unit": "allocs/op",
      "value": 0,
    },
    {
      "extra": "3900769 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"json",_"xml"}",
      "unit": "ns/op	       0 B/op	       0 allocs/op",
      "value": 307.1,
    },
    {
      "extra": "3900769 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"json",_"xml"} - ns/op",
      "unit": "ns/op",
      "value": 307.1,
    },
    {
      "extra": "3900769 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"json",_"xml"} - B/op",
      "unit": "B/op",
      "value": 0,
    },
    {
      "extra": "3900769 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"json",_"xml"} - allocs/op",
      "unit": "allocs/op",
      "value": 0,
    },
    {
      "extra": "5118646 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"application/json",_"application/xml"}",
      "unit": "ns/op	       0 B/op	       0 allocs/op",
      "value": 316.1,
    },
    {
      "extra": "5118646 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"application/json",_"application/xml"} - ns/op",
      "unit": "ns/op",
      "value": 316.1,
    },
    {
      "extra": "5118646 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"application/json",_"application/xml"} - B/op",
      "unit": "B/op",
      "value": 0,
    },
    {
      "extra": "5118646 times
4 procs",
      "name": "Benchmark_Ctx_Accepts/run-[]string{"application/json",_"application/xml"} - allocs/op",
      "unit": "allocs/op",
      "value": 0,
    },
    {
      "extra": "3067818 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#01",
      "unit": "ns/op	      48 B/op	       2 allocs/op",
      "value": 390.7,
    },
    {
      "extra": "3067818 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#01 - ns/op",
      "unit": "ns/op",
      "value": 390.7,
    },
    {
      "extra": "3067818 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#01 - B/op",
      "unit": "B/op",
      "value": 48,
    },
    {
      "extra": "3067818 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#01 - allocs/op",
      "unit": "allocs/op",
      "value": 2,
    },
    {
      "extra": "1992943 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#02",
      "unit": "ns/op	      48 B/op	       2 allocs/op",
      "value": 602.1,
    },
    {
      "extra": "1992943 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#02 - ns/op",
      "unit": "ns/op",
      "value": 602.1,
    },
    {
      "extra": "1992943 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#02 - B/op",
      "unit": "B/op",
      "value": 48,
    },
    {
      "extra": "1992943 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#02 - allocs/op",
      "unit": "allocs/op",
      "value": 2,
    },
    {
      "extra": "4180965 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#03",
      "unit": "ns/op	       0 B/op	       0 allocs/op",
      "value": 286.3,
    },
    {
      "extra": "4180965 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#03 - ns/op",
      "unit": "ns/op",
      "value": 286.3,
    },
    {
      "extra": "4180965 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#03 - B/op",
      "unit": "B/op",
      "value": 0,
    },
    {
      "extra": "4180965 times
4 procs",
      "name": "Benchmark_Utils_GetOffer/mime_extension#03 - allocs/op",
      "unit": "allocs/op",
      "value": 0,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "go",
}
`;

exports[`extractResult() extracts benchmark output from go - go_output.txt 1`] = `
{
  "benches": [
    {
      "extra": "5000000 times
8 procs",
      "name": "BenchmarkFib10",
      "unit": "ns/op",
      "value": 325,
    },
    {
      "extra": "30000 times",
      "name": "BenchmarkFib20",
      "unit": "ns/op",
      "value": 40537.123,
    },
    {
      "extra": "5000000 times
8 procs",
      "name": "BenchmarkFib/my_tabled_benchmark_-_10",
      "unit": "ns/op",
      "value": 325,
    },
    {
      "extra": "30000 times",
      "name": "BenchmarkFib/my_tabled_benchmark_-_20",
      "unit": "ns/op",
      "value": 40537.123,
    },
    {
      "extra": "30001 times",
      "name": "BenchmarkFib/my/tabled/benchmark_-_20",
      "unit": "ns/op",
      "value": 40537.456,
    },
    {
      "extra": "30001 times",
      "name": "BenchmarkFib/my/tabled/benchmark_-_20,var1=13,var2=14",
      "unit": "ns/op",
      "value": 40537.456,
    },
    {
      "extra": "4587789 times
16 procs",
      "name": "BenchmarkFib11",
      "unit": "ns/op	         3.000 auxMetricUnits",
      "value": 262.7,
    },
    {
      "extra": "4587789 times
16 procs",
      "name": "BenchmarkFib11 - ns/op",
      "unit": "ns/op",
      "value": 262.7,
    },
    {
      "extra": "4587789 times
16 procs",
      "name": "BenchmarkFib11 - auxMetricUnits",
      "unit": "auxMetricUnits",
      "value": 3,
    },
    {
      "extra": "37653 times
16 procs",
      "name": "BenchmarkFib22",
      "unit": "ns/op	         4.000 auxMetricUnits",
      "value": 31915,
    },
    {
      "extra": "37653 times
16 procs",
      "name": "BenchmarkFib22 - ns/op",
      "unit": "ns/op",
      "value": 31915,
    },
    {
      "extra": "37653 times
16 procs",
      "name": "BenchmarkFib22 - auxMetricUnits",
      "unit": "auxMetricUnits",
      "value": 4,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "go",
}
`;

exports[`extractResult() extracts benchmark output from googlecpp - googlecpp_output.json 1`] = `
{
  "benches": [
    {
      "extra": "iterations: 3070566
cpu: 213.65507206163295 ns
threads: 1",
      "name": "fib_10",
      "unit": "ns/iter",
      "value": 214.98980114547953,
    },
    {
      "extra": "iterations: 23968
cpu: 27364.90320427236 ns
threads: 1",
      "name": "fib_20",
      "unit": "ns/iter",
      "value": 27455.600415007055,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "googlecpp",
}
`;

exports[`extractResult() extracts benchmark output from jmh - jmh_output.json 1`] = `
{
  "benches": [
    {
      "extra": "iterations: 3
forks: 1
threads: 1",
      "name": "org.openjdk.jmh.samples.JMHSample_01_HelloWorld.wellHelloThere",
      "unit": "ops/s",
      "value": 3376238873.1228185,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "jmh",
}
`;

exports[`extractResult() extracts benchmark output from jmh - jmh_output_2.json 1`] = `
{
  "benches": [
    {
      "extra": "iterations: 3
forks: 1
threads: 1",
      "name": "org.openjdk.jmh.samples.JMHSample_01_HelloWorld.wellHelloThere ( {"paramA":"17","paramB":"33"} )",
      "unit": "ops/s",
      "value": 3376238873.1228185,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "jmh",
}
`;

exports[`extractResult() extracts benchmark output from julia - julia_output.json 1`] = `
{
  "benches": [
    {
      "extra": "gctime=0
memory=0
allocs=0
params={"gctrial":true,"time_tolerance":0.05,"samples":10000,"evals":390,"gcsample":false,"seconds":5,"overhead":0,"memory_tolerance":0.01}",
      "name": "fib/10",
      "unit": "ns",
      "value": 246.03846153846155,
    },
    {
      "extra": "gctime=0
memory=0
allocs=0
params={"gctrial":true,"time_tolerance":0.05,"samples":10000,"evals":1,"gcsample":false,"seconds":5,"overhead":0,"memory_tolerance":0.01}",
      "name": "fib/20",
      "unit": "ns",
      "value": 31028,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "julia",
}
`;

exports[`extractResult() extracts benchmark output from pytest - pytest_output.json 1`] = `
{
  "benches": [
    {
      "extra": "mean: 24.08868133322941 usec
rounds: 38523",
      "name": "bench.py::test_fib_10",
      "range": "stddev: 0.000006175090189861328",
      "unit": "iter/sec",
      "value": 41513.272817492856,
    },
    {
      "extra": "mean: 2.9850306726618627 msec
rounds: 278",
      "name": "bench.py::test_fib_20",
      "range": "stddev: 0.0001745301654140968",
      "unit": "iter/sec",
      "value": 335.0049328331567,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "pytest",
}
`;

exports[`extractResult() extracts benchmark output from pytest - pytest_several_units.json 1`] = `
{
  "benches": [
    {
      "extra": "mean: 149.95610248628836 nsec
rounds: 68536",
      "name": "bench.py::test_fib_1",
      "range": "stddev: 2.9351731952139377e-8",
      "unit": "iter/sec",
      "value": 6668618.238403659,
    },
    {
      "extra": "mean: 28.85754012484424 usec
rounds: 20025",
      "name": "bench.py::test_fib_10",
      "range": "stddev: 0.000005235937482008476",
      "unit": "iter/sec",
      "value": 34652.98828915334,
    },
    {
      "extra": "mean: 3.611916368852473 msec
rounds: 122",
      "name": "bench.py::test_fib_20",
      "range": "stddev: 0.0003737982822178215",
      "unit": "iter/sec",
      "value": 276.8613383807958,
    },
    {
      "extra": "mean: 2.0038430469999997 sec
rounds: 5",
      "name": "bench.py::test_sleep_2",
      "range": "stddev: 0.0018776587251587858",
      "unit": "iter/sec",
      "value": 0.49904108083570886,
    },
  ],
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
  "tool": "pytest",
}
`;
